# Fix-ps2

./: README.md
.github/workflows/: build-ipa.yml  build-unsigned-ipa.yml
cpp/: CMakeLists.txt  Info.plist.in  PerformanceDefaults.h  ios_main.mm
tests/: test_cpp_performance_defaults.py  test_ipsx2_optimize_config.py
tools/: ipsx2_optimize_config.py
