cmake_minimum_required(VERSION 3.20)

project(iPSX2 VERSION 0.1.3 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_OBJCXX_STANDARD 17)
set(CMAKE_OBJCXX_STANDARD_REQUIRED ON)

option(iPSX2_REAL_DEVICE "Build for real iOS device" OFF)

if(CMAKE_SYSTEM_NAME STREQUAL "iOS")
  set(CMAKE_OSX_ARCHITECTURES "arm64" CACHE STRING "iOS architecture" FORCE)
  if(iPSX2_REAL_DEVICE)
    set(CMAKE_OSX_SYSROOT "iphoneos" CACHE STRING "iOS SDK" FORCE)
  else()
    set(CMAKE_OSX_SYSROOT "iphonesimulator" CACHE STRING "iOS SDK" FORCE)
  endif()
endif()

set(IPSX2_BUNDLE_ID "com.otti83.iPSX2")
set(IPSX2_BUILD_NUMBER 3)
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in" "${CMAKE_CURRENT_BINARY_DIR}/Info.plist" @ONLY)

if(APPLE OR CMAKE_SYSTEM_NAME STREQUAL "iOS")
  enable_language(OBJCXX)

  add_executable(iPSX2 MACOSX_BUNDLE
    ios_main.mm
    PerformanceDefaults.h
  )

  set_target_properties(iPSX2 PROPERTIES
    OUTPUT_NAME "iPSX2"
    MACOSX_BUNDLE TRUE
    MACOSX_BUNDLE_GUI_IDENTIFIER "${IPSX2_BUNDLE_ID}"
    MACOSX_BUNDLE_BUNDLE_NAME "iPSX2"
    MACOSX_BUNDLE_BUNDLE_VERSION "${IPSX2_BUILD_NUMBER}"
    MACOSX_BUNDLE_SHORT_VERSION_STRING "${PROJECT_VERSION}"
    MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_BINARY_DIR}/Info.plist"
    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "${IPSX2_BUNDLE_ID}"
    XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
    XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "18.0"
    XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED "NO"
    XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED "NO"
    XCODE_ATTRIBUTE_CODE_SIGN_STYLE "Manual"
    XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY ""
    XCODE_ATTRIBUTE_DEVELOPMENT_TEAM ""
    XCODE_ATTRIBUTE_PROVISIONING_PROFILE_SPECIFIER ""
    XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME ""
    XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC "YES"
  )

  target_link_libraries(iPSX2 PRIVATE
    "-framework UIKit"
    "-framework QuartzCore"
    "-framework CoreGraphics"
  )

  target_compile_definitions(iPSX2 PRIVATE
    IPSX2_VERSION_STR="${PROJECT_VERSION}"
  )
else()
  add_library(iPSX2_defaults INTERFACE)
  target_include_directories(iPSX2_defaults INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
endif()
